--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-6">
+            <h1>COMING SOON...</h1>
             <h2>A music discovery &<br>
               investment platform
             </h2>
             <a href="#about">Learn More</a>
-            <div class="meta-info">This is a static website while we work on developing the product. This website is not optimized for all screen sizes</div>
+            <div class="meta-info">This is a static website while we work on developing the product.<br>This website is not optimized for all screen sizes</div>
 
           </div>
           <div class="col-sm-6 hidden-xs"></div>
@@ -99,20 +100,24 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-5 hidden-xs img-container">
-          <img src="assets/images/work.jpg" alt="how it works" class="img-responsive">
+          <img src="assets/images/headphones.jpg" alt="how it works" class="img-responsive">
         </div>
         <div class="col-sm-7">
           <h3>How it Works?</h3>
-          <p class="excerpt">
-            A musician uploads a song, for which they are paid 1 cent each time it is streamed (over 30 seconds) and one dollar for each paid download. To meet current obligations, the musician can raise money against the a portion of earnings of the song. 
-          </p>
-          <p>True music fans are able to use this website to find the latest and least known songs from talented musicians - at only 1 cent per play. If they love a song, and beleive that it will reach heights, fans are able to fund the artist in return for claims of the song's earnings. Once invested in a song, the fan shares the link to their network - to introduce their friends to newest and best music, as well as increase the value of their claims. Later, the fan can sell his claims to other fans who want in on the action on our easy to use marketplace. 
+          <p>
+            1. Artist uploads a song – along with information on the song, as well as (optional) a funding request. In the funding request, the artist will state how much money she would like to raise, and offer a percentage of her earnings of the song on this website. <br><br>
+
+            2. Music enthusiasts can browse, stream, and download the newest songs from these upcoming artists. Streaming costs 1 cent, and downloads cost $1. <br><br>
+
+            3. Fans can go the extra mile and choose to fund the a song in return for claim of earnings. This means every time the song gets played or downloaded from this website, the fan gets paid. Naturally, the more that the fan promotes the song to his friends, the more people will learn of this unknown gem of an artist AND the more the fan will earn – hopefully enough or more than he intially supported the artist wtih. <br><br>
+
+            4. Fans that support artists are able to use the marketplace to buy or sell the claim of income to other fans. This allows for more people to join the fun, as well as conveniently cash out on investments. <br><br>
           </p>
         </div>
       </div>
     </div>
   </section>
-  <section id="how_works_action">
+  <!-- <section id="how_works_action">
     <div class="action-container">
       <h2>Tell your friends about us</h2>
       <p>In addition to the 100 beatcoins we give you when you get started, we will deposit a 50 additional beatcoins for each successful referral. Of course, your friend will receive a welcome package too!
@@ -120,7 +125,7 @@
       <a href="#">Share Now</a>
       <div class="meta-info">This campaign may or may not be used during launch</div>
     </div>
-  </section>
+  </section> -->
   <section id="services">
     <div class="service_container">
       <div class="tag">Team</div>
