--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-5 hidden-xs img-container">
-          <img src="assets/images/headphones.jpg" alt="how it works" class="img-responsive">
+          <!-- <img src="assets/images/headphones.jpg" alt="how it works" class="img-responsive"> -->
         </div>
         <div class="col-sm-7">
           <h3>How it Works?</h3>
@@ -130,7 +130,7 @@
     <div class="service_container">
       <div class="tag">Team</div>
       <h1>Shenil - Boston University (Finance)</h1>
-      <h1>Ravikanth -  IIT  (Aerospace Engineering)</h1>
+      <h1>Ravikanth -  IIT Madras (Aerospace Engineering)</h1>
       <h1>Satyaram - IIT Madras (Mechanical Engineering)</h1>
   </section>
   <section id="faq">
