--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   </section>
   <section id="about">
     <div class="container">
+      <p>Alphabeats Music is music discovery, streaming and funding platform. We give you access to the newest music from brilliant musicians that you didn't know even existed! Also, we provide you with the opportunity to monetize on your hours spent looking for great music. </p> <br><br>
       <div class="row">
         <div class="col-sm-6">
           <h3>A Platform for New Musicians</h3>
